chore: Redis 기반 Stream, Lock, NotificationSender 리팩토링 및 클래스 구조 정리